refactor(agent): 统一General草稿规则与比较边界